# glass

./: .all-contributorsrc  .all-contributorsrc.json  .commitlint.rules.js  .git-blame-ignore-revs  .gitignore  .matplotlibrc  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .readthedocs.yaml  .readthedocs.yml  .shellcheckrc  .typos.toml  .vale.ini  .yamllint.yaml  CHANGELOG.md  CITATION.bib  CITATION.cff  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MyFile.Fits  README.md  README.rst  commitlint.rules.js  coverage.xml  noxfile.py  plot.py  pyproject.toml  run-all-examples.py  setup.cfg  test.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml  dependabot.yml  pr-title-checker-config.json  release_notes.sh  test-constraints.txt
.github/ISSUE_TEMPLATE/: blank.yaml  bug_report.yaml  config.yml  documentation.yaml  question.yaml
.github/actions/: examples.yml
.github/actions/examples/: action.yml
.github/workflows/: build.yml  cibuildwheel.yml  docs.yml  documentation.yaml  examples-on-commit.yml  examples-on-label.yml  examples.yml  linting.yaml  publish.yml  pull_request.yaml  pull_request.yml  pull_request_review.yml  regression-test.yaml  regression-test.yml  release.yaml  release.yml  run-examples.yaml  run-examples.yml  test-examples-on-label.yaml  test-examples-on-label.yml  test-examples-on-push.yaml  test-examples-on-push.yml  test.yaml  test.yml  tox.yml
.readthedocs/: environment.yml
docs/: CONTRIBUTORS.md  Makefile  conf.py  examples.rst  galaxies.rst  glossary.rst  index.rst  lensing.rst  matter.rst
docs/_static/css/: custom.css
docs/examples/: index.rst  searchindex.db
docs/examples/1_basic/: create_new_model.ipynb  create_new_model.py.md5  create_new_model.rst  groups.ipynb  groups.py.md5  groups.rst  index.rst  matter.ipynb  matter.py.md5  matter.rst  photoz.ipynb  photoz.py.md5  photoz.rst  plot_density.ipynb  plot_density.py.md5  plot_density.rst  plot_density_codeobj.pickle  plot_lensing.ipynb  plot_lensing.py.md5  plot_lensing.rst  plot_lensing_codeobj.pickle  sg_execution_times.rst
docs/examples/2_advanced/: index.rst  plot_s4_galaxies.ipynb  plot_s4_galaxies.py.md5  plot_s4_galaxies.rst  plot_shears.ipynb  plot_shears.py.md5  plot_shears.rst  plot_shears_codeobj.pickle  sg_execution_times.rst
docs/manual/: extensions.rst  first-steps.rst  get-in-touch.rst  index.rst  installation.rst  releases.rst
docs/modules/: algorithm.rst  arraytools.rst  grf.rst  harmonics.rst  healpix.rst  index.rst
docs/reference/: core.rst  cosmology.rst  fields.rst  galaxies.rst  index.rst  lensing.rst  matter.rst  observations.rst  points.rst  shapes.rst  shells.rst  user.rst
docs/reference/grf/: glass.grf.rst  index.rst
docs/user/: bibliography.rst  definitions.rst  extensions.rst  getting_started.rst  how-glass-works.rst  how_glass_works.rst  index.rst  publications.rst
examples/: README.rst  convergence-from-matter.cfg  custom-modules-with-annotations.cfg  custom-modules.cfg  explicit-names.cfg  galaxy-number-density-from-matter.cfg  importing-modules.cfg  lognormal-matter-and-lensing.cfg  mask_example_N128.fits  mymodule.py  plot_density.py  plot_lensing.py  reading-cls-from-files.cfg  run-all-examples.py  run.py  simulation-from-python.ipynb  variable_depth_example.ipynb
examples/1-basic/: cls.npy  density.ipynb  galaxy-redshift-distributions.ipynb  lensing-harmonic.ipynb  lensing.ipynb  matplotlibrc  matter.ipynb  photoz.ipynb  shells.ipynb
examples/1_basic/: README.rst  create_new_model.py  groups.py  matter.py  photoz.py  plot_density.py  plot_lensing.py
examples/2-advanced/: cosmic_shear.ipynb  legacy-mode.ipynb  legacy_mode.ipynb  matplotlibrc  stage_4_galaxies.ipynb  variable_depth_example.ipynb
examples/2_advanced/: README.rst  plot_s4_galaxies.py  plot_shears.py  stageIV_catalogue.py
glass/: __init__.py  __main__.py  _array_api_utils.py  _array_comparison.py  _generator.py  _rng.py  _simulate.py  _types.py  _user.py  _utils.py  algorithm.py  all.py  analysis.py  array.py  arraytools.py  cls.py  conftest.py  core.py  cosmology.py  fields.py  galaxies.py  generator.py  glass.py  harmonics.py  healpix.py  jax.py  lensing.py  math.py  matter.py  numeric.py  observations.py  output.py  plot.py  plotting.py  points.py  random.py  random_fields.py  remove_me.py  rng.py  rng_dispatcher.py  (+10 more)
glass/_array_api/: cupy.py  numpy.py  torch.py
glass/core/: __init__.py  algorithm.py  array.py  constants.py  fitsIO.py
glass/core/test/: test_algorithm.py  test_array.py  test_fits.py
glass/ext/: __init__.py  camb.py  ccl.py
glass/grf/: __init__.py  _core.py  _solver.py  _transformations.py
glass/test/: test_core.py  test_fits.py  test_galaxies.py  test_generator.py  test_lensing.py  test_math.py  test_points.py  test_shapes.py  test_shells.py  test_sim.py  test_util.py
glass/tests/: test_types.py  test_typing.py
tests/: _jax_rng.py  conftest.py  test_algorithm.py  test_array_api_utils.py  test_arraytools.py  test_fields.py  test_fits.py  test_galaxies.py  test_harmonictools.py  test_jax.py  test_lensing.py  test_observations.py  test_points.py  test_shapes.py  test_shells.py  test_user.py  test_utils.py
tests/benchmarks/: README.md  test_algorithm.py  test_algorithm_benchmarks.py  test_arraytools.py  test_fields.py  test_galaxies.py  test_harmonics.py  test_lensing.py  test_points.py  test_shapes.py  test_shells.py
tests/benchmarks/archer2/: README.md  regression_test_cpu.sh  regression_test_gpu.sh  (+5 more)
tests/core/: test_algorithm.py  test_array.py  test_array_api_utils.py  test_arraytools.py  test_fields.py  test_galaxies.py  test_harmonics.py  test_healpix.py  test_jax.py  test_lensing.py  test_observations.py  test_points.py  test_shapes.py  test_shells.py  test_sht.py  test_user.py
tests/fixtures/: array_backends.py  domain.py  generators.py  healpy_data.py  helper_classes.py
tests/grf/: test_core.py  test_solver.py  test_transformations.py
tests/regression/: test_arraytools.py  test_fields.py  test_galaxies.py  test_harmonics.py  test_lensing.py  test_points.py  test_shapes.py  test_shells.py
(+12 files in other folders)
