[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-vcs",
    "hatchling",
]

[dependency-groups]
docs = [
    "cosmology.api",
    "furo",
    "ipython",
    "jax",
    "jaxtyping",
    "matplotlib",
    "myst-parser",
    "nbsphinx",
    "sphinx-autodoc-typehints",
    "sphinx-toolbox",
    "sphinx<8.2.0",
    "sphinxcontrib-katex",
]
test = [
    "cosmology.api",
    "fitsio",
    "jax",
    "pytest",
    "pytest-cov",
    "pytest-doctestplus",
    "pytest-mock",
    "pytest-rerunfailures",
]

[project]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "array-api-extra>=0.9.0",
    "array-api-strict>=2.0",
    "healpix>=2022.11.1",
    "healpy>=1.15.0",
    "transformcl>=2022.8.9",
    "typing-extensions>=4.13.2",
]
description = "Generator for Large Scale Structure"
dynamic = [
    "version",
]
maintainers = [
    {email = "n.tessore@ucl.ac.uk", name = "Nicolas Tessore"},
]
name = "glass"
optional-dependencies = {examples = [
    "camb",
    "cosmology.api",
    "cosmology.compat.camb",
    "glass.ext.camb",
    "jupyter",
    "matplotlib",
]}
readme = "README.md"
requires-python = ">=3.10"
license.text = "MIT License"

[project.urls]
Changelog = "https://glass.readthedocs.io/stable/manual/releases.html"
Documentation = "https://glass.readthedocs.io/stable"
Homepage = "https://github.com/glass-dev/glass"
Issues = "https://github.com/glass-dev/glass/issues"

[tool.coverage]
report = {exclude_also = [
    "class \\w+\\(Protocol(\\[(\\w+, )*\\w+\\])?\\):", # protocol classes
    "if TYPE_CHECKING:", # type-checking imports
], omit = [
    "glass/_version.py",
], skip_covered = true, sort = "cover"}
run = {branch = true, parallel = true, source = [
    "glass",
]}
paths.source = [
    "src",
    ".nox*/*/lib/python*/site-packages",
]

[tool.hatch]
build.hooks.vcs.version-file = "glass/_version.py"
build.targets.sdist.exclude = [
    ".*",
    "docs/*",
    "examples/*",
    "noxfile.py",
    "tests/*",
]
version.source = "vcs"

[tool.mypy]
disallow_untyped_decorators = false
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
plugins = [
    "numpy.typing.mypy_plugin",
]
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "-ra",
    "-v",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
log_cli_level = "DEBUG"
minversion = "6.0"
testpaths = [
    "tests",
]
xfail_strict = true

[tool.ruff]
fix = true
force-exclude = true
show-fixes = true
src = [
    "glass",
]
lint.allowed-confusables = [
    "α",
    "γ",
]
lint.ignore = [
    "COM812", # missing-trailing-comma (ruff-format recommended)
    "D203", # one-blank-line-before-class
    "D212", # blank-line-before-class
    "ISC001", # single-line-implicit-string-concatenation (ruff-format recommended)
    "RUF003", # ambiguous-unicode-character-comment
]
lint.isort = {known-first-party = [
    "glass",
], known-third-party = [
    "jax",
], section-order = [
    "future",
    "standard-library",
    "third-party",
    "array-api",
    "cosmo",
    "first-party",
    "local-folder",
], sections = {"array-api" = [
    "array_api_extra",
    "array_api_strict",
], "cosmo" = [
    "camb",
    "cosmology",
]}}
lint.per-file-ignores = {"__init__.py" = [
    "F401", # unused-import
], "docs*" = [
    "D100", # undocumented-public-module
    "INP001", # implicit-namespace-package,
], "examples*" = [
    "ANN001", # missing-type-function-argument
    "ANN002", # missing-type-args
    "ANN201", # missing-return-type-undocumented-public-function
    "D103", # undocumented-public-function
    "PLR2004", # magic-value-comparison
    "T201", # print
], "glass*" = [
    "D205", # missing-blank-line-after-summary
    "D401", # non-imperative-mood
    "EM101", # raw-string-in-exception
    "EM102", # f-string-in-exception
    "PLR2004", # TODO: magic-value-comparison
    "TRY003", # raise-vanilla-args
], "glass/grf/_*" = [
    "SLF001", # private-member-access
], "noxfile.py" = [
    "T201", # print
], "tests*" = [
    "ANN001", # missing-type-function-argument
    "ANN201", # missing-return-type-undocumented-public-function
    "ANN202", # missing-return-type-private-function
    "D100", # undocumented-public-module
    "D103", # TODO: undocumented-public-function
    "D104", # undocumented-public-package
    "INP001", # implicit-namespace-package
    "PLC0415", # import-outside-top-level
    "PLR2004", # magic-value-comparison
    "S101", # assert
    "SLF001", # private-member-access
]}
lint.select = [
    "ALL",
]
lint.mccabe.max-complexity = 18
lint.pydocstyle.convention = "numpy"

[tool.tomlsort]
all = true
in_place = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false
overrides."tool.ruff.lint.isort.section-order".inline_arrays = false
