[metadata]
name = glass
version = 2022.9.29
maintainer = Nicolas Tessore
maintainer_email = n.tessore@ucl.ac.uk
description = Generator for Large Scale Structure
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
url = https://github.com/glass-dev/glass
project_urls =
    Documentation = https://glass.readthedocs.io/
    Issues = https://github.com/glass-dev/glass/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    numpy
    healpy>=1.15.0
    cosmology@git+https://github.com/glass-dev/cosmology.git
    gaussiancl>=2022.7.28
packages = find_namespace:

[options.packages.find]
include = glass*

[options.extras_require]
test =
    pytest
docs =
    sphinx
    pydata-sphinx-theme
    sphinxcontrib-mermaid
    numpydoc

[flake8]
ignore = E226,E501,E741
