[metadata]
name = glass
version = 2023.5
maintainer = Nicolas Tessore
maintainer_email = n.tessore@ucl.ac.uk
description = Generator for Large Scale Structure
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/glass-dev/glass
project_urls =
    Documentation = https://glass.readthedocs.io/
    Issues = https://github.com/glass-dev/glass/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    numpy>=1.20.0
    healpix>=2022.11.1
    healpy>=1.15.0
    cosmology>=2022.10.9
    gaussiancl>=2022.10.21
packages = find_namespace:

[options.packages.find]
include = glass*

[options.extras_require]
test =
    pytest
docs =
    sphinx
    furo
    sphinxcontrib-katex
    numpydoc
    matplotlib

[flake8]
ignore = E226,E501,E741
